[gd_scene load_steps=8 format=3 uid="uid://cojer2wymkcb3"]

[ext_resource type="Script" path="res://Code/clownfish.gd" id="1_7trj1"]
[ext_resource type="Texture2D" uid="uid://bfwwn3421k7av" path="res://Assets/Fish/Gemfish.png" id="2_ach1a"]

[sub_resource type="Animation" id="Animation_wjmub"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xi5jg"]
resource_name = "Swim"
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bg2bm"]
_data = {
"RESET": SubResource("Animation_wjmub"),
"Swim": SubResource("Animation_xi5jg")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hidl3"]
radius = 6.0
height = 64.0

[sub_resource type="CircleShape2D" id="CircleShape2D_uf3ol"]
radius = 96.0208

[node name="Clownfish" type="CharacterBody2D"]
position = Vector2(0, -1)
collision_layer = 4
collision_mask = 2
script = ExtResource("1_7trj1")
speed = 25.0
fish = "gemfish"
size = 4

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ach1a")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_bg2bm")
}

[node name="CatchArea2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CatchCollisionShape2D" type="CollisionShape2D" parent="CatchArea2D"]
position = Vector2(-1, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_hidl3")

[node name="EyesArea2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="EyesCollisionShape2D" type="CollisionShape2D" parent="EyesArea2D"]
shape = SubResource("CircleShape2D_uf3ol")

[connection signal="body_entered" from="CatchArea2D" to="." method="_on_catch_area_2d_body_entered"]
[connection signal="body_entered" from="EyesArea2D" to="." method="_on_eyes_area_2d_body_entered"]
[connection signal="body_exited" from="EyesArea2D" to="." method="_on_eyes_area_2d_body_exited"]
